--- a/TaxGenieOnline/stylesheets/stylesheet.css
+++ b/TaxGenieOnline/stylesheets/stylesheet.css
@@ -118,8 +118,8 @@ ol, ul
 }
 .logoIcon
 {
-    width: 80px;
-    background: url(../images/logo_web.png) no-repeat center top;
+    width: 343px;
+    background: url(../images/TGOlogo.png) no-repeat center top;
     height: 80px;
     text-indent: -9999px;
     display: block;
