--- a/TaxGenieOnline/stylesheets/stylesheet.css
+++ b/TaxGenieOnline/stylesheets/stylesheet.css
@@ -945,3 +945,20 @@ TD.whnew{
 	margin:3px;
 	padding:3px;
 }
+ .grid_paging a
+{
+     text-decoration: none;   }
+.grid_paging a:hover
+{
+    text-decoration: underline;     }
+.grid_paging a:link
+{
+   font-size: 15px;
+    padding: 2px 6px;
+    background-color :#EBECEE;
+    border: 1px solid #B5BAC0;    }
+.grid_paging span
+    {            background-color: #263441;
+            border: 1px solid #DBEAFF;
+            color: #FFFFFF;
+            padding: 2px 5px;    }
